--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,10 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src/**/*.tsx",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/**/*.test.tsx"
   ]
 }
